# CaptchaTask

./: .env.example  .gitignore  DATA_SERVICE_SETUP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data-service/: app.py  pyproject.toml  users.json
pages/: contact_form_page.py  home_page.py
tests/: conftest.py  data_client.py  test_contact_form.py
