[tool.poetry]
name = "data-service"
version = "0.1.0"
description = "Test data service for CaptchaTask - provides user entities via JSON API"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
Werkzeug = "2.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

